--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "bundler",
     "forceConsistentCasingInFileNames": true,
     "target": "ESNext",
+    "resolveJsonModule": true,
     "removeComments": true,
     "strict": true,
     "noImplicitAny": true,
