--- a/package.json
+++ b/package.json
@@ -5,27 +5,24 @@
   "license": "MIT",
   "type": "module",
   "sideEffects": false,
-  "source": "src/index.ts",
-  "main": "dist/index.cjs",
-  "umd:main": "dist/index.umd.js",
-  "module": "dist/index.mjs",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "require": "./dist/index.cjs",
-    "default": "./dist/index.modern.mjs"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist/"
+    "dist"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "microbundle --tsconfig tsconfig.build.json",
+    "build": "tsup src/index.ts --clean --dts --format esm,cjs",
     "test": "jest",
     "ts": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx src",
     "format": "prettier --write src",
-    "prepare": "pnpm ts && pnpm lint && pnpm test && pnpm clean && pnpm build"
+    "prepack": "pnpm ts && pnpm lint && pnpm test && pnpm build"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
@@ -36,8 +33,8 @@
     "@typescript-eslint/rule-tester": "^8.26.0",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
-    "microbundle": "^0.15.1",
     "prettier": "^3.5.3",
+    "tsup": "^8.4.0",
     "typescript": "^5.8.2"
   },
   "dependencies": {
