--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@matt-tingen/eslint-config": "^0.9.0",
+    "@matt-tingen/eslint-config": "^0.14.0",
     "@types/eslint": "^8",
     "@types/node": "^22.13.10",
+    "eslint-plugin-eslint-plugin": "^6.4.0",
     "@typescript-eslint/rule-tester": "^8.26.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.23.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
